--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -19,7 +19,8 @@
         "alarms",
         "tabs",
         "webNavigation",
-        "*://*/*"
+        "*://*/*",
+        "activeTab"
     ],
     "content_scripts": [
         {
