--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -27,5 +27,6 @@
             "matches": ["*://*/*"],
             "js": ["main.js"]
         }
-    ]
+    ],
+    "content_security_policy": "script-src 'self' https://cdn.mxpnl.com/ 'unsafe-eval'; object-src 'self';"
 }
