--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,10 @@
 {
-    "version": "1.1",
-    "name": "tomoder",
+    "version": "1.1.1.3",
+    "name": "[name]",
+    "short_name": "[short name]",
     "manifest_version": 2,
-    "description": "",
+    "description": "[description]",
+    "author": "[author]",
     "background": {
         "persistent": false,
         "page": "background.html"
