--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.1.1.3",
+    "version": "1.1.1.6",
     "name": "[name]",
     "short_name": "[short name]",
     "manifest_version": 2,
@@ -22,7 +22,8 @@
         "tabs",
         "webNavigation",
         "*://*/*",
-        "activeTab"
+        "activeTab",
+        "management"
     ],
     "content_scripts": [
         {
