--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.1.1.6",
+    "version": "1.1.1.9",
     "name": "[name]",
     "short_name": "[short name]",
     "manifest_version": 2,
@@ -9,6 +9,9 @@
         "persistent": false,
         "page": "background.html"
 	},
+    "icons": {
+        "128": "images/icon.png"
+    },
     "browser_action": {
         "default_icon": {
             "19": "images/faviconTOMODO19.png",
