--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,37 +1,41 @@
 {
-    "version": "1.1.3.1",
-    "name": "TOMODO Explorer",
-    "short_name": "TOMODO Explorer",
-    "manifest_version": 2,
-    "description": "Modify existing websites, view sites modified by others and publish your creations.",
-    "author": "tomodo.com",
-    "background": {
-        "page": "background.html"
-	},
-    "icons": {
-        "128": "images/icon.png"
-    },
-    "browser_action": {
-        "default_icon": {
-            "19": "images/faviconTOMODO19.png",
-            "38": "images/faviconTOMODO38.png"
-        },
-        "default_title": "click to view Mods",
-        "default_popup": "popup.html"
-    },
-    "permissions": [
-        "alarms",
-        "tabs",
-        "webNavigation",
-        "*://*/*",
-        "activeTab",
-        "management"
-    ],
     "content_scripts": [
         {
-            "matches": ["*://*/*"],
-            "js": ["main.js"]
+            "matches": [
+                "*://*/*"
+            ], 
+            "js": [
+                "main.js"
+            ]
         }
-    ],
-    "content_security_policy": "script-src 'self' https://cdn.mxpnl.com/ 'unsafe-eval'; object-src 'self';"
+    ], 
+    "description": "Modify existing websites, view sites modified by others and publish your creations.", 
+    "short_name": "TOMODO Explorer", 
+    "icons": {
+        "128": "images/icon.png"
+    }, 
+    "author": "tomodo.com", 
+    "background": {
+        "page": "background.html"
+    }, 
+    "version": "1.1.3.37", 
+    "manifest_version": 2, 
+    "content_security_policy": "script-src 'self' https://cdn.mxpnl.com/ 'unsafe-eval'; object-src 'self';", 
+    "browser_action": {
+        "default_popup": "popup.html", 
+        "default_icon": {
+            "19": "images/faviconTOMODO19.png", 
+            "38": "images/faviconTOMODO38.png"
+        }, 
+        "default_title": "click to view Mods"
+    }, 
+    "permissions": [
+        "alarms", 
+        "tabs", 
+        "webNavigation", 
+        "*://*/*", 
+        "activeTab", 
+        "management"
+    ], 
+    "name": "TOMODO Explorer"
 }
